--- a/places.html
+++ b/places.html
@@ -1049,7 +1049,7 @@
                                                     class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                     style="
                                                       --media-container_border-radius: var(
-                                                        --i-g-gvoq
+                                                        --border-radius-lg
                                                       );
                                                     "
                                                   >
@@ -1305,7 +1305,7 @@
                                                     class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                     style="
                                                       --media-container_border-radius: var(
-                                                        --i-g-gvoq
+                                                        --border-radius-lg
                                                       );
                                                     "
                                                   >
@@ -1561,7 +1561,7 @@
                                                     class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                     style="
                                                       --media-container_border-radius: var(
-                                                        --i-g-gvoq
+                                                        --border-radius-lg
                                                       );
                                                     "
                                                   >
@@ -1871,7 +1871,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -2586,7 +2586,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -3298,7 +3298,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -4010,7 +4010,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -4722,7 +4722,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -5426,7 +5426,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -6140,7 +6140,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -6852,7 +6852,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -7484,7 +7484,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -8116,7 +8116,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -8829,7 +8829,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -9542,7 +9542,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -10254,7 +10254,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -10966,7 +10966,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -11678,7 +11678,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
@@ -12384,7 +12384,7 @@
                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr dir dir-ltr"
                                             style="
                                               --media-container_border-radius: var(
-                                                --i-g-gvoq
+                                                --border-radius-lg
                                               );
                                             "
                                           >
