--- a/profile.html
+++ b/profile.html
@@ -1205,7 +1205,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                             class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                             style="
                                                               --media-container_border-radius: var(
-                                                                --i-g-gvoq
+                                                                --border-radius-lg
                                                               );
                                                             "
                                                           >
@@ -2282,7 +2282,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       class="card-alt-4__media-container card-alt-4__rounded-bl card-alt-4__rounded-br card-alt-4__rounded-tl card-alt-4__rounded-tr card-alt-4__pointer-events dir dir-ltr"
                                                       style="
                                                         --media-container_border-radius: var(
-                                                          --i-g-gvoq
+                                                          --border-radius-lg
                                                         );
                                                       "
                                                     >
