--- a/trips.html
+++ b/trips.html
@@ -334,7 +334,7 @@
                                                       width: 72px;
                                                       min-height: 1px;
                                                       border-radius: var(
-                                                        --go-h-jh-l
+                                                        --border-radius
                                                       );
                                                     "
                                                   >
@@ -368,7 +368,7 @@
                                                           object-fit: cover;
                                                           vertical-align: bottom;
                                                           border-radius: var(
-                                                            --go-h-jh-l
+                                                            --border-radius
                                                           );
                                                         "
                                                       />
@@ -379,7 +379,7 @@
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/bfc211eb-8496-4828-a106-2b2992a374e1.jpeg?im_w=720');
                                                         background-size: cover;
                                                         border-radius: var(
-                                                          --go-h-jh-l
+                                                          --border-radius
                                                         );
                                                       "
                                                     ></div>
@@ -457,7 +457,7 @@
                                                       width: 72px;
                                                       min-height: 1px;
                                                       border-radius: var(
-                                                        --go-h-jh-l
+                                                        --border-radius
                                                       );
                                                     "
                                                   >
@@ -491,7 +491,7 @@
                                                           object-fit: cover;
                                                           vertical-align: bottom;
                                                           border-radius: var(
-                                                            --go-h-jh-l
+                                                            --border-radius
                                                           );
                                                         "
                                                       />
@@ -502,7 +502,7 @@
                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?im_w=720');
                                                         background-size: cover;
                                                         border-radius: var(
-                                                          --go-h-jh-l
+                                                          --border-radius
                                                         );
                                                       "
                                                     ></div>
@@ -1068,7 +1068,7 @@
                                                     width: 72px;
                                                     min-height: 1px;
                                                     border-radius: var(
-                                                      --go-h-jh-l
+                                                      --border-radius
                                                     );
                                                   "
                                                 >
@@ -1108,7 +1108,7 @@
                                                         object-fit: cover;
                                                         vertical-align: bottom;
                                                         border-radius: var(
-                                                          --go-h-jh-l
+                                                          --border-radius
                                                         );
                                                         position: static !important;
                                                       "
@@ -1120,7 +1120,7 @@
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/187cf174-8859-4bcc-bd8b-4960ad1298c1.jpeg?im_w=720');
                                                       background-size: cover;
                                                       border-radius: var(
-                                                        --go-h-jh-l
+                                                        --border-radius
                                                       );
                                                       position: static !important;
                                                     "
@@ -1197,7 +1197,7 @@
                                                     width: 72px;
                                                     min-height: 1px;
                                                     border-radius: var(
-                                                      --go-h-jh-l
+                                                      --border-radius
                                                     );
                                                   "
                                                 >
@@ -1237,7 +1237,7 @@
                                                         object-fit: cover;
                                                         vertical-align: bottom;
                                                         border-radius: var(
-                                                          --go-h-jh-l
+                                                          --border-radius
                                                         );
                                                         position: static !important;
                                                       "
@@ -1249,7 +1249,7 @@
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?im_w=720');
                                                       background-size: cover;
                                                       border-radius: var(
-                                                        --go-h-jh-l
+                                                        --border-radius
                                                       );
                                                     "
                                                   ></div>
